[gd_scene load_steps=29 format=3 uid="uid://dbocxh517g6jj"]

[ext_resource type="Script" uid="uid://dfhutr60wutgc" path="res://Script/Player/player.gd" id="1_dd0ac"]
[ext_resource type="Texture2D" uid="uid://c0vsj2mex11rn" path="res://Asset/Player/player_sprite_sheet.png" id="2_3smsa"]
[ext_resource type="Script" uid="uid://cm2qk1u4ps3qn" path="res://Script/Player/player_idle_state.gd" id="3_dd0ac"]
[ext_resource type="Script" uid="uid://ccmsl3hn6pt17" path="res://Script/Component/state_machine.gd" id="3_dey5f"]
[ext_resource type="Script" uid="uid://d08dojrdgk7o" path="res://Script/Player/player_walk_state.gd" id="4_0u5uq"]
[ext_resource type="Script" uid="uid://8hcm3busisjt" path="res://Script/Player/player_jump_state.gd" id="5_jlvik"]
[ext_resource type="Script" uid="uid://cs3uqoc4yd6si" path="res://Script/Player/player_air_state.gd" id="6_gk6dx"]
[ext_resource type="Texture2D" uid="uid://d271mdjdom470" path="res://Asset/Player/player_head.png" id="7_h4iuc"]
[ext_resource type="Script" uid="uid://bis2qlftmyus5" path="res://Script/Player/player_wall_slide_state.gd" id="7_jhyir"]
[ext_resource type="Script" uid="uid://brxygfkjpbb6c" path="res://Script/Player/player_wall_jump_state.gd" id="8_74mp2"]
[ext_resource type="Script" uid="uid://cq1tadttthn8h" path="res://Script/Player/player_dash_state.gd" id="9_oikmp"]
[ext_resource type="Script" uid="uid://cbvn561d7kp2c" path="res://Script/Player/player_death_state.gd" id="11_r5xpd"]
[ext_resource type="PackedScene" uid="uid://bg4v14wuqkcnp" path="res://Scene/Component/healthbox_component.tscn" id="13_hnuln"]
[ext_resource type="Script" uid="uid://cpgw5mnurs3xc" path="res://Script/Player/ability_manager.gd" id="15_ks1b7"]
[ext_resource type="PackedScene" uid="uid://c65ci35u571ef" path="res://Scene/Ability/DashStrike/empty_dash_strike.tscn" id="16_w02sr"]
[ext_resource type="Script" uid="uid://dlxenxeltbjsh" path="res://Script/Component/health_component.gd" id="17_ks1b7"]
[ext_resource type="PackedScene" uid="uid://cwgi8eycq8cs3" path="res://Scene/Ability/Bow/empty_bow.tscn" id="17_w02sr"]

[sub_resource type="Animation" id="Animation_1uthr"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2(0, 0)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HealthboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Collisions:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HeadNudgeLeftOne:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HeadNudgeLeftTwo:enabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HeadNudgeRightOne:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HeadNudgeRightTwo:enabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("LedgeHopRightOne:enabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("LedgeHopRightTwo:enabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("LedgeHopLeftOne:enabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("LedgeHopLeftTwo:enabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_sitmc"]
resource_name = "dash"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [15]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, -1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("HealthboxComponent/CollisionShape2D:disabled")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Collisions:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1.5707963267948966]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("HeadNudgeLeftOne:enabled")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("HeadNudgeLeftTwo:enabled")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("HeadNudgeRightOne:enabled")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/8/type = "value"
tracks/8/imported = false
tracks/8/enabled = true
tracks/8/path = NodePath("HeadNudgeRightTwo:enabled")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/9/type = "value"
tracks/9/imported = false
tracks/9/enabled = true
tracks/9/path = NodePath("LedgeHopRightOne:enabled")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/10/type = "value"
tracks/10/imported = false
tracks/10/enabled = true
tracks/10/path = NodePath("LedgeHopRightTwo:enabled")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/11/type = "value"
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/path = NodePath("LedgeHopLeftOne:enabled")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/12/type = "value"
tracks/12/imported = false
tracks/12/enabled = true
tracks/12/path = NodePath("LedgeHopLeftTwo:enabled")
tracks/12/interp = 1
tracks/12/loop_wrap = true
tracks/12/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_clmyk"]
resource_name = "fall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [13]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_w4v6v"]
resource_name = "idle"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [0, 1, 2, 3, 4]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -3), Vector2(0, -2), Vector2(0, -3), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_khti1"]
resource_name = "jump"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [12]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(-0.010917317, 0),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [Vector2(0, -5), Vector2(0, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_4s4jn"]
resource_name = "run"
length = 0.6
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [6, 7, 8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.2, 0.3, 0.4, 0.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -6), Vector2(0, -5), Vector2(0, -4), Vector2(0, -5), Vector2(0, -4)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_w02sr"]
resource_name = "walk"
length = 0.9
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.15, 0.3, 0.45, 0.6, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 1,
"values": [18, 19, 20, 21, 22, 23]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3, 0.45, 0.75),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, -4), Vector2(0, -3), Vector2(0, -4), Vector2(0, -3)]
}

[sub_resource type="Animation" id="Animation_lpccl"]
resource_name = "wall"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprites/BodySprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [14]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprites/HeadSprite:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, -5)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprites/BodySprite:position")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_khti1"]
_data = {
&"RESET": SubResource("Animation_1uthr"),
&"dash": SubResource("Animation_sitmc"),
&"fall": SubResource("Animation_clmyk"),
&"idle": SubResource("Animation_w4v6v"),
&"jump": SubResource("Animation_khti1"),
&"run": SubResource("Animation_4s4jn"),
&"walk": SubResource("Animation_w02sr"),
&"wall": SubResource("Animation_lpccl")
}

[sub_resource type="CapsuleShape2D" id="CapsuleShape2D_aqm4k"]
radius = 6.0
height = 16.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3smsa"]
size = Vector2(11, 17)

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 5
script = ExtResource("1_dd0ac")

[node name="Debug" type="Label" parent="."]
unique_name_in_owner = true
offset_right = 40.0
offset_bottom = 23.0

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
unique_name_in_owner = true
script = ExtResource("3_dey5f")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("3_dd0ac")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b3jif3gct1ipq"

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("4_0u5uq")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b3jif3gct1ipq"

[node name="Jump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("5_jlvik")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b3jif3gct1ipq"

[node name="Air" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("6_gk6dx")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b3jif3gct1ipq"

[node name="WallSlide" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_jhyir")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b3jif3gct1ipq"

[node name="WallJump" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_74mp2")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b3jif3gct1ipq"

[node name="Dash" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("9_oikmp")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b3jif3gct1ipq"

[node name="Death" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("11_r5xpd")
player = NodePath("../..")
metadata/_custom_type_script = "uid://b3jif3gct1ipq"

[node name="CoyoteTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.1
one_shot = true

[node name="JumpBufferTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 0.12
one_shot = true

[node name="Animations" type="AnimationPlayer" parent="."]
unique_name_in_owner = true
libraries = {
&"": SubResource("AnimationLibrary_khti1")
}

[node name="HealthComponent" type="Node2D" parent="." node_paths=PackedStringArray("death_state", "state_machine")]
unique_name_in_owner = true
script = ExtResource("17_ks1b7")
MAX_HEALTH = 100
death_state = NodePath("../StateMachine/Death")
state_machine = NodePath("../StateMachine")
metadata/_custom_type_script = "uid://dlxenxeltbjsh"

[node name="HealthboxComponent" parent="." node_paths=PackedStringArray("health_component") instance=ExtResource("13_hnuln")]
unique_name_in_owner = true
collision_layer = 2
health_component = NodePath("../HealthComponent")

[node name="CollisionShape2D" type="CollisionShape2D" parent="HealthboxComponent"]
shape = SubResource("CapsuleShape2D_aqm4k")
debug_color = Color(1.5883148e-06, 0.6395268, 0.36786926, 0.41960785)

[node name="Sprites" type="Sprite2D" parent="."]
unique_name_in_owner = true

[node name="BodySprite" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
texture = ExtResource("2_3smsa")
hframes = 6
vframes = 4

[node name="HeadSprite" type="Sprite2D" parent="Sprites"]
unique_name_in_owner = true
position = Vector2(0, -4)
texture = ExtResource("7_h4iuc")

[node name="HeadNudgeLeftOne" type="RayCast2D" parent="."]
position = Vector2(-5, -8)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="HeadNudgeLeftTwo" type="RayCast2D" parent="."]
position = Vector2(-3, -8)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="HeadNudgeRightOne" type="RayCast2D" parent="."]
position = Vector2(4, -8)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="HeadNudgeRightTwo" type="RayCast2D" parent="."]
position = Vector2(2, -8)
target_position = Vector2(0, -2)
hit_from_inside = true

[node name="LedgeHopRightOne" type="RayCast2D" parent="."]
position = Vector2(4, 7)
target_position = Vector2(2, 0)
hit_from_inside = true

[node name="LedgeHopRightTwo" type="RayCast2D" parent="."]
position = Vector2(4, 3)
target_position = Vector2(2, 0)
hit_from_inside = true

[node name="LedgeHopLeftOne" type="RayCast2D" parent="."]
position = Vector2(-5, 7)
target_position = Vector2(-2, 0)
hit_from_inside = true

[node name="LedgeHopLeftTwo" type="RayCast2D" parent="."]
position = Vector2(-5, 3)
target_position = Vector2(-2, 0)
hit_from_inside = true

[node name="Collisions" type="CollisionShape2D" parent="."]
position = Vector2(-0.5, -0.5)
shape = SubResource("RectangleShape2D_3smsa")

[node name="AbilityManager" type="Node2D" parent="." node_paths=PackedStringArray("weapon", "dash")]
unique_name_in_owner = true
script = ExtResource("15_ks1b7")
weapon = NodePath("EmptyBow")
dash = NodePath("EmptyDashStrike")

[node name="EmptyDashStrike" parent="AbilityManager" instance=ExtResource("16_w02sr")]

[node name="EmptyBow" parent="AbilityManager" instance=ExtResource("17_w02sr")]
